# ChangeLog for app-portage/overlay-utils
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  22 Jun 2010; Markos Chandras <hwoarang@gentoo.org>
  overlay-utils-0.2.1.ebuild:
  Fix subversion dependency

  16 Oct 2009; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  -overlay-utils-0.2-r2.ebuild, +overlay-utils-0.2.1.ebuild:
  Version bump, fixes missed Manifest, if created with sunrise-commit

  17 Apr 2009; Christian Ruppert <idl0r@gentoo.org>
  overlay-utils-0.2-r2.ebuild:
  Added missing die statement.

  17 Apr 2009; Justin Lecher (jlec) <jlec@j-schmitz.net>
  overlay-utils-0.2-r2.ebuild:
  QA quotes around EAPI version

  01 Feb 2009; Markus Ullmann <jokey@gentoo.org>
  overlay-utils-0.2-r2.ebuild:
  EAPI magic

  05 Nov 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  overlay-utils-0.2-r2.ebuild:
  Drop empty DEPEND and add || die to dobin

  11 Mar 2008; Markus Ullmann <jokey@gentoo.org>
  -overlay-utils-0.2-r1.ebuild:
  Drop old

  19 Feb 2008; Jakub Moc <jakub@gentoo.org> overlay-utils-0.2-r2.ebuild:
  Make the sed expression actually readable

  17 Feb 2008; (Tommy[D]) tommy100@gmx.de +overlay-utils-0.2-r2.ebuild:
  Use own echangelog-tng to have svn cp/mv working

  06 Jan 2008; Tiago Cunha (tcunha) <me@tiagocunha.org>
  overlay-utils-0.2-r1.ebuild:
  Added ~sparc keyword

  07 Nov 2007; Jakub Moc <jakub@gentoo.org> -overlay-utils-0.2.ebuild:
  Nuke old

  06 Nov 2007; Nathan Smith (ndansmith) <ndansmith@gmail.com>
  overlay-utils-0.2-r1.ebuild:
  Added ~ppc keyword

  12 Jul 2007; Alex Tarkovsky <alextarkovsky@gmail.com>
  -overlay-utils-0.1.ebuild, +overlay-utils-0.2-r1.ebuild:
  Adjusted path to functions.sh for baselayout-2 users; using echangelog from
  gentoolkit-dev instead of provided echangelog-tng; nuking obsolete 0.1

  10 Mar 2007; Peter Weller <welp@gentoo.org> overlay-utils-0.2.ebuild:
  Keyworded ~x86-fbsd

  13 Nov 2006; Piotr Jaroszyński <peper@gentoo.org>
  overlay-utils-0.2.ebuild:
  Add ~amd64.
