@@ -1,4 +1,4 @@
 DIST overlay-utils-0.2.1.tar.bz2 10002 RMD160 9936103b6cb8819d15a034f477d8ad8f92f82801 SHA1 801b607c385e1cacf1f876ef8ec5454bfdc7303e SHA256 f07aac4d008b441ed1014eba7d1f36eedae251afbc3d88be0343a35715ca3155
-EBUILD overlay-utils-0.2.1.ebuild 576 RMD160 7afb0008f54e22151cc495708a530517f2f2ae01 SHA1 4f6d7b8d106da3c423cf41c3f0eb3768de265989 SHA256 44dcb109f98f16b132ce7f97746fc08c832da927da222c0e0cb7b123426bc764
-MISC ChangeLog 2738 RMD160 d980a6b70a3c92cccab2a2735fcc3ac9043de36a SHA1 f377afbe25bfdb2865a095d3f2163b01f89ce2a4 SHA256 ab877a094e88f20a9be716219ea1c82ab0e860b14061f818d63024dff8bedfaa
+EBUILD overlay-utils-0.2.1.ebuild 674 RMD160 af3c33aa9028a78048615e6e6527b365e829a1b7 SHA1 cf38c16c3af573be01babfc63517ed622cdbc904 SHA256 6962c654129eec2c2c605b313a567056bdf1728cb57a1ea6c558ce611c26f441
+MISC ChangeLog 2866 RMD160 d54ed836ca5f6b2c2f51d94da8f6c8aa33233f6e SHA1 97bde81b7a151bd25439fc48a67a908ef8679132 SHA256 cd7c583a230d68e87ccd29319b25efaa73e8595642991aa806ecb485312b52e1
 MISC metadata.xml 229 RMD160 f0f6417bec31ce8baba6d476664f7210c8c84c98 SHA1 e5f94f5caadc6f843fc90bb7959570cd503676fd SHA256 3b08fca3c878bdfc4e7639f477dd542d55a4ab5dce39a475e82633071d13eb3f
